# llm-actor

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  run.bat  run.command  setup.bat  setup.command
2PERSONAS_PROJECT/: boot.py
2_PROJECT/: boot.py
BASIC_PROJECT/: boot.py  ollama_test.py  settings.ini  settings_loader.py
COFFEE_MACHINE/: action_watcher.py  arduino_bridge.py  boot.py  keepalive.py  keepalive_stability.py  keepalive_stability_report.py
COFFEE_MACHINE/prompts/: template.txt
EXAMPLE_PROJECT/: __init__.py  action_watcher.py  boot.py  door_actions.py  inbox_writer.py  project_config.json
EXAMPLE_PROJECT/assets/: README.txt
REXAMPLE_PROJECT/: action_watcher.py  boot.py  inbox_writer.py
runtime/: actions.txt  audio_device_preferences.json  coffee_machine_stability_speech.aiff  config.json  dialogue.txt  inbox.txt  params_inbox.ndjson
runtime/dialogues/: dialogue0.txt  dialogue1.txt  dialogue2.txt  dialogue3.txt  dialogue4.txt
setup_scripts/: readme.md  run.command  setup.bat  setup.command
src/app/: audio_events.py  bootstrap.py  cli.py  config.py  devices.py  filters.py  history.py  inbox_watch.py  params_apply.py  pipeline copy.py  pipeline.py  pipeline_2_personas.py  pipeline_google.py  pipeline_groq.py  pipeline_ollama.py  prompt_templates.py  prompts.py  resampler_patch.py  session.py
src/app_ollama/: config.py  devices.py  filters.py  history.py  inbox_watch.py  logging_io.py  metrics.py  session.py  (+1 more)
tests/: test_action_extractor_filter.py  test_assistant_streaming.py  test_audio_device_preferences.py  test_coffee_machine_arduino_bridge.py  test_coffee_machine_keepalive.py  test_coffee_machine_keepalive_stability.py  test_coffee_machine_project.py  test_coffee_machine_project_scaffold.py  test_coffee_machine_prompt_profiles.py  test_history_logging.py  test_inbox_serialization.py  test_keepalive_stability_report.py  test_llm_thinking_level.py  test_macos_hear_stt.py  test_macos_say_tts.py  test_ollama_llm_provider.py  test_openai_llm_params.py  test_pipeline_idle_settings.py  test_process_lock.py  test_prompt_templates.py  test_reasoning_trace_filter.py  test_runtime_file_truncation.py  test_tts_audio_event_logging.py  test_tts_default_provider.py
(+26 files in other folders)
