[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-thin"
version = "0.1.0"
description = "Thin Pipecat wrapper for Deepgram Flux → Gemini → Deepgram Aura voice pipeline"
authors = [{name = "Jan Zuiderveld"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[deepgram,google,local]==0.0.91",
    "python-dotenv==1.1.1",
    "pydantic==2.12.3",
    "sounddevice==0.5.3",
    "typer==0.20.0",
    "watchfiles==1.1.1",
    "pyserial==3.5",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
